@@ -13,9 +13,9 @@ cleanRequest();
 $context = array();
 ]]></search>
 			<add><![CDATA[
-$context = array();
+$context = array('pretty' => array());
 // Unserialize the array of pretty board URLs
-$context['pretty_board_urls'] = unserialize($modSettings['pretty_board_urls']);
+$context['pretty']['board_urls'] = unserialize($modSettings['pretty_board_urls']);
 // Clean the request variables, add slashes, etc.
 cleanRequest();
 ]]></add>
@@ -44,89 +44,7 @@ function cleanRequest()
 			<add><![CDATA[
 		// Now make absolutely sure it's a number.
 		// Check for pretty board URLs too!
-		$board = (int) (is_numeric($_REQUEST['board']) ? $_REQUEST['board'] : array_search($_REQUEST['board'], $context['pretty_board_urls']));
-]]></add>
-		</operation>
-	</file>
-
-	<file name="$sourcedir/Subs.php">
-		<operation>
-			<search position="end"></search>
-			<add><![CDATA[
-$characterHash = array (
-	'a'	=>	array ('a', 'A', 'à', 'À', 'á', 'Á', 'â', 'Â', 'ã', 'Ã', 'ä', 'Ä', 'å', 'Å', 'ª'),
-	'b'	=>	array ('b', 'B'),
-	'c'	=>	array ('c', 'C', 'ç', 'Ç'),
-	'd'	=>	array ('d', 'D', 'Ð'),
-	'e'	=>	array ('e', 'E', 'è', 'È', 'é', 'É', 'ê', 'Ê', 'ë', 'Ë'),
-	'f'	=>	array ('f', 'F'),
-	'g'	=>	array ('g', 'G'),
-	'h'	=>	array ('h', 'H'),
-	'i'	=>	array ('i', 'I', 'ì', 'Ì', 'í', 'Í', 'î', 'Î', 'ï', 'Ï'),
-	'j'	=>	array ('j', 'J'),
-	'k'	=>	array ('k', 'K'),
-	'l'	=>	array ('l', 'L'),
-	'm'	=>	array ('m', 'M'),
-	'n'	=>	array ('n', 'N', 'ñ', 'Ñ'),
-	'o'	=>	array ('o', 'O', 'ò', 'Ò', 'ó', 'Ó', 'ô', 'Ô', 'õ', 'Õ', 'ö', 'Ö', 'ø', 'Ø', 'º'),
-	'p'	=>	array ('p', 'P'),
-	'q'	=>	array ('q', 'Q'),
-	'r'	=>	array ('r', 'R', '®'),
-	's'	=>	array ('s', 'S', 'ß'),
-	't'	=>	array ('t', 'T'),
-	'u'	=>	array ('u', 'U', 'ù', 'Ù', 'ú', 'Ú', 'û', 'Û', 'ü', 'Ü', 'µ'),
-	'v'	=>	array ('v', 'V'),
-	'w'	=>	array ('w', 'W'),
-	'x'	=>	array ('x', 'X', '×'),
-	'y'	=>	array ('y', 'Y', 'ý', 'Ý', 'ÿ'),
-	'z'	=>	array ('z', 'Z'),
-	'-'	=>	array ('-', ' '),
-	'_'	=>	array ('_'),
-	'+'	=>	array ('+', '&'),
-	'+-'	=>	array ('±'),
-	'0'	=>	array ('0'),
-	'1'	=>	array ('1', '¹'),
-	'2'	=>	array ('2', '²'),
-	'3'	=>	array ('3', '³'),
-	'4'	=>	array ('4'),
-	'5'	=>	array ('5'),
-	'6'	=>	array ('6'),
-	'7'	=>	array ('7'),
-	'8'	=>	array ('8'),
-	'9'	=>	array ('9'),
-	'ae'	=>	array ('æ', 'Æ'),
-	'at'	=>	array ('@'),
-	'cent'	=>	array ('¢'),
-	'copyright'	=>	array ('©'),
-	'degrees'	=>	array ('°'),
-	'dollar'	=>	array ('$'),
-	'half'	=>	array ('½'),
-	'percent'	=>	array ('%'),
-	'pound'	=>	array ('£'),
-	'quarter'	=>	array ('¼'),
-	'section'	=>	array ('§'),
-	'three-quarters'	=>	array ('¾'),
-	'yen'	=>	array ('¥'),
-);
-
-function generatePrettyUrl($text)
-{
-	global $characterHash;
-
-	$prettytext = '';
-	for ($i = 0; $i < strlen($text); $i++)
-	{
-		foreach ($characterHash as $replace => $search)
-		{
-			if (in_array(substr($text, $i, 1), $search))
-			{
-				$prettytext .= $replace;
-				break;
-			}
-		}
-	}
-	return $prettytext;
-}
+		$board = (int) (is_numeric($_REQUEST['board']) ? $_REQUEST['board'] : array_search(mb_strtolower($_REQUEST['board'], 'UTF-8'), $context['pretty']['board_urls']));
 ]]></add>
 		</operation>
 	</file>
